# udem_projects

./: README.md
IFT 1025 - Programming in Java/: TicTacToeGUI.java  TicTacToeGUI2.java
IFT 1025 - Programming in Java/Ex/: Exercice1.java  Matrice.java  Noeud.java  Parser.java  Polynome.java  UndefinedVariableException.java  Vecteur.java  design (1).txt
IFT 1025 - Programming in Java/Flappy Ghost/: auteurs.txt
IFT 1025 - Programming in Java/Legend of Zoe/: Characters.java  LegendOfZoe.java  Level.java  LevelObjects.java  Monstre.java  Mur.java  Sortie.java  Tresor.java  Zoe.java  auteurs.txt
IFT 2015 - Data structures in Python/TP1/: Laby.py  PostToIn.py
IFT 2015 - Data structures in Python/TP2/: crazy8.py
IFT 2015 - Data structures in Python/TP3/: ants.py
IFT 2245 - Operating system in C/TP0/: .gitignore  README.md  name_validator.py  names.txt  setupgit.sh
IFT 2245 - Operating system in C/TP0/test/: CMakeLists.txt  Makefile  biggest_temp.txt  check_utils.h  checks.c  clean_tests.py  installcheckelf.py  runall.py
IFT 2245 - Operating system in C/TP1/: names.txt
IFT 2245 - Operating system in C/TP1/test/: CMakeLists.txt  Makefile  in_out.yaml  prep_tests.py  runall.py
IFT 2245 - Operating system in C/TP2/: .gitignore  README.md  name_validator.py  names.txt.bak
IFT 2245 - Operating system in C/TP2/test/: CMakeLists.txt  Makefile  call_by_string.c  check_utils.h  checks.c  clean_tests.py  prep_tests.py  runall.py
IFT 2245 - Operating system in C/TP3/: README.md  names.txt
IFT 2245 - Operating system in C/TP3/src/: BACKING_STORE.txt  CMakeLists.txt  parse.y  pm.c  pm.h  pt.c  pt.h  tlb.c  vmm.c  vmm.h
IFT 2245 - Operating system in C/TP3/test_check/: CMakeLists.txt  Makefile  call_by_string.h  check_utils.h  checks.c  runall.py  tests_buildbs.txt
IFT 2245 - Operating system in C/TP4/: .gitignore  names.txt
IFT 2245 - Operating system in C/TP5 Docker/: .gitignore  Dockerfile  README.md  machine.turing  makefile  name_validator.py  names.txt
IFT 2905 - user experience in Java , xaml & Android Studio/TP3/: .gitignore  settings.gradle
IFT 2905 - user experience in Java , xaml & Android Studio/TP4/: .gitignore  settings.gradle
IFT 2905 - user experience in Java , xaml & Android Studio/Tp1/: settings.gradle
IFT 3205 - Signal processing in C/TP1/: Tp1_IFT3205_1-1  Tp1_IFT3205_1-1.c  Tp1_IFT3205_1-2  Tp1_IFT3205_1-2.c  Tp1_IFT3205_1-3  Tp1_IFT3205_1-3.c  Tp1_IFT3205_1-4  Tp1_IFT3205_1-4.c  Tp1_IFT3205_2-1a  Tp1_IFT3205_2-1a.c  Tp1_IFT3205_2-1b  Tp1_IFT3205_2-1b.c  Tp1_IFT3205_2-1c  Tp1_IFT3205_2-1c.c  Tp1_IFT3205_2-1d  Tp1_IFT3205_2-1d.c  Tp1_IFT3205_2-1e  Tp1_IFT3205_2-1e.c  Tp1_IFT3205_2-2  Tp1_IFT3205_2-2.c  Tp1_IFT3205_3-2a  Tp1_IFT3205_3-2a.c  Tp1_IFT3205_3-2b  Tp1_IFT3205_3-2b.c  image-Tp1_IFT3205-1-1.pgm  image-Tp1_IFT3205-2-1a.pgm  image-Tp1_IFT3205-2-1b.pgm  image-Tp1_IFT3205-2-1c.pgm  image-Tp1_IFT3205-2-1d.pgm  image-Tp1_IFT3205-2-1e.pgm  image-Tp1_IFT3205-2-2.pgm  image-Tp1_IFT3205-3-2a.pgm  image-Tp1_IFT3205-3-2b.pgm
IFT 3205 - Signal processing in C/TP2/: Tp2_IFT3205_2-1  Tp2_IFT3205_2-1.c  Tp2_IFT3205_2-2  Tp2_IFT3205_2-2.c  Tp2_IFT3205_2-3  Tp2_IFT3205_2-3.c  Tp2_IFT3205_2-4  (+13 more)
(+1442 files in other folders)
